  * Moloch >= 1.6.0 requires NodeJS 8.x, 8.12 or later
  * Moloch >= 1.0.0 requires NodeJS 8.x
  * Moloch >= 0.20.0 requires NodeJS 6.x
  * Moloch >= 0.18.1 requires NodeJS 4.x

NOTICE: Restart wiseService before capture when upgrading

2.3.0 2020/03/xx
  - release - CyberChef 9.16.2, node 10.20.1, daq 2.0.7
  - viewer - set content-type for cyberchef files
  - capture - new parsers arp, bgp, igmp, isis, lldp, ospf, pim, 
  - capture - protocol parsing code has been refactored, can now write parsers
              of ethernet and other ip protocols
  - capture - new disableParsers, default of arp.so
  - capture - new unkEthernet, unkIpProtocol protocols
  - capture - support QUIC version 46
  - all - switch most ES apis to typeless format

2.2.3 2020/03/09
  - viewer - Experimental treemap view in spigraph
  - viewer - Hunts now retry talking to failed remote nodes
  - viewer - Completed Hunts have a repeat button
  - viewer - Fix some Hunt stat and display issues
  - viewer - Fixed Hunts/Tags working with ILM
  - viewer - Fixed notifier issues and issue #1365
  - viewer - Increase navbar contrast
  - viewer - Spiview should be faster loading data
  - viewer - Debug now prints out config vars like capture
  - release - Fix lua.so not being included with builds
  - capture - Fix "-r -" not working
  - parliament - Ignored issues should remain unless deleted
  - db - Can set sessions refresh interval

2.2.2 2020/02/18
  - release - node 10.19.0
  - capture - fix SYN retrans handling
  - capture - New tcphealthcheck plugin (thanks fj604)
  - capture - support communityId field in rules/wise
  - capture - fixed drop stats for long running systems
  - viewer - Fix decode crash (thanks mammo0)
  - viewer - experimental pie chart in spigraph
  - viewer - experimental table view in spigraph
  - viewer - fix viewer crash when hunting fake sessions (issue #1374)
  - viewer - fix capture stats sort
  - viewer - new accessLogFormat, accessLogSuppressPaths settings to