@@ -20,6 +20,7 @@ NOTICE: Restart wiseService before capture when upgrading
 2.3.0 2020/03/xx
   - release - CyberChef 9.16.2, node 10.20.1, daq 2.0.7
   - viewer - set content-type for cyberchef files
+  - viewer - add support for caTrustFile to addUser and multies
   - capture - new parsers arp, bgp, igmp, isis, lldp, ospf, pim, 
   - capture - protocol parsing code has been refactored, can now write parsers
               of ethernet and other ip protocols
